# RL-Football-Game

./: CMakeLists.txt  EvaluationCenter.cpp  EvaluationCenter.h  Peashooter.cpp  Peashooter.h  README.md  main.cpp
Videos/: v2.mov
